# acdc-son

./: .gitignore  README.md  pyproject.toml
acdc/: __init__.py  blend.py  blend_controls.py  channels.py  data.py
acdc/core/: __init__.py  data.py  experiment.py  io.py  metadata.py  stack.py
acdc/middleware/: __init__.py  context.py  load.py  pipeline.py  segment.py  volume.py
acdc/segment/: __init__.py  __main__.py  editing.py  lut.py  model.py  presenter.py  segment_model.py  segment_presenter.py  segment_view.py  segment_viewer.py  view.py  viewer.py
acdc/ui/: __init__.py  blend_controls.py  dialogs.py  icons.py  label_list.py  lut.py  open_experiment.py
acdc/utils/: __init__.py  blend.py  channels.py  display_levels.py
acdc/volume/: __init__.py  __main__.py  camera.py  canvas.py  lut.py  model.py  prepare.py  presenter.py  view.py  viewer.py  volume_presenter.py  volume_view.py  volume_viewer.py
cellacdc/: __init__.py  __main__.py  app.py  blend.py  blend_controls.py  data.py  display_levels.py  icons.py  overlay.py  viewer.py
cellacdc/segmentation/: __init__.py  __main__.py  experiment.py  lut.py  model.py  presenter.py  tools.py  view.py  viewer.py
cellacdc/volume/: __init__.py  __main__.py  canvas.py  cmaps.py  lut.py  model.py  prepare.py  presenter.py  view.py  viewer.py
tests/: test_api.py  test_blend.py  test_display_levels.py  test_experiment_io.py  test_gl_blend.py  test_icons.py  test_middleware.py  test_overlay.py  test_segmentation_core.py  test_volume.py
