[project]
name = "cellacdc"
version = "0.1.0"
description = "Minimal manual segmentation GUI for microscopy (Cell-ACDC compatible masks)"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Cell-ACDC contributors" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "tifffile>=2024.2.12",
    "qtpy>=2.4",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]

[project.scripts]
acdc-seg = "cellacdc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cellacdc"]

[dependency-groups]
dev = ["pytest>=8"]
